--- a/News.txt
+++ b/News.txt
@@ -1,5 +1,3 @@
 ممنوع بيع صنف panadol 
-
 نضيف فى المرتجعات augment 1 mg 
-   مرتجاااااااااااااااااااااااااااااااااااااااااااااااااااات
-لارؤتؤرتر
+بيع صنف جديد yyy
